<resources>
    <string name="Australia">Australia</string>
    <string name="BC_SR_NUMBER">Unknown</string>
    <string name="BUILD_NUMBER">3.8.0</string>
    <string name="Brazil">Brazil</string>
    <string name="Camera_Tab_Artistic">Artistic</string>
    <string name="Camera_Tab_Food">Food</string>
    <string name="Camera_Tab_Portrait">Portrait</string>
    <string name="Camera_Tab_Scenery">Scenery</string>
    <string name="China">China</string>
    <string name="D_hrs">%1$d hrs</string>
    <string name="D_hrs_ago">%1$d hrs ago</string>
    <string name="D_m">%1$d m</string>
    <string name="D_m_ago">%1$d m ago</string>
    <string name="D_people_voted">%1$d people voted</string>
    <string name="France">France</string>
    <string name="GDPR_agree_button">Accept and Continue</string>
    <string name="GDPR_description">Thank you for choosing U. Before we get started, please accept the &lt;a href=%1$s&gt;terms of services&lt;/a&gt; and &lt;a href=%2$s&gt;privacy policy&lt;/a&gt;.</string>
    <string name="GDPR_description_link">You can always access them from:&lt;br&gt;&lt;a href=%1$s&gt;https://u.cyberlink.com/terms&lt;/a&gt;&lt;br&gt;&lt;a href=%2$s&gt;https://u.cyberlink.com/privacy&lt;/a&gt;</string>
    <string name="GDPR_update_description">We have updated our &lt;a href=%1$s&gt;terms&lt;/a&gt; and &lt;a href=%2$s&gt;privacy policy&lt;/a&gt; to support the latest features and updates. Please accept the updated privacy policy to continue.</string>
    <string name="GDPR_welcome_title">Welcome to U</string>
    <string name="Germany">Germany</string>
    <string name="Hong_Kong">Hong Kong</string>
    <string name="India">India</string>
    <string name="Indonesia">Indonesia</string>
    <string name="Italy">Italy</string>
    <string name="Japan">Japan</string>
    <string name="KEY_IN_APP_PURCHASE">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAs7BTq4htbHbOKa87HfqQeOk7Hvc/DcSRMIGJwe9WMKJgpLTqiiaNpXLKCUu93QLjUtKFm8V8eBOZzVUtta1NX8IcR/m/iO5n8A2lj7lyYAT3VEjQAIaVLiItJPi+XNtmIuuK813oV3FhODA6bDa7VaVD9OfU+Y747qKnuedflLEXxC2KM08ocxgdV/+DJQdlNoZXcnfuGR8xBmEzu02gyI790fm29hSkMFXLpo60Kf3IZXV/5omd5dMTMKcbM7cLuRDNnqzcfjxGbUFMP+JxVRO2b8JGsPyXIy5vZH7nJXL0SvAPenA780Qj7Wgr1lRQmdz8bcU3jwgTAEXckjtmXQIDAQAB</string>
    <string name="Location">Location</string>
    <string name="MAPS_API_KEY">AIzaSyBqRuOh6oXRu1qSsveYknEqfCSVzq8kcEw</string>
    <string name="Malaysia">Malaysia</string>
    <string name="Mexico">Mexico</string>
    <string name="Netherlands">Netherlands</string>
    <string name="New_Zealand">New Zealand</string>
    <string name="Philippines">Philippines</string>
    <string name="Portugal">Portugal</string>
    <string name="REVISION">189396</string>
    <string name="SR_NUMBER">Unknown</string>
    <string name="S_added_a_new_poll_in_S">%1$s added a new poll in %2$s.</string>
    <string name="S_asked_a_question_in_polls">%1$s asked a question in polls.</string>
    <string name="S_is_one_of_the_admins_are_you_sure_to_remove_him_her_from_the_admins">%1$s is one of the admins. If you remove them from the group, they will no longer be an administrator. Do you want to continue?</string>
    <string name="S_replied_to_a_poll_in_S">%1$s replied to a poll in %2$s.</string>
    <string name="S_replied_to_a_question_in_polls">%1$s replied to a question in polls.</string>
    <string name="Saudi_Arabia">Saudi Arabia</string>
    <string name="Singapore">Singapore</string>
    <string name="South_Korea">South Korea</string>
    <string name="Spain">Spain</string>
    <string name="Switzerland">Switzerland</string>
    <string name="Taiwan">Taiwan</string>
    <string name="Thailand">Thailand</string>
    <string name="US_Canada">United States/Canada</string>
    <string name="United_Arab_Emirates">United Arab Emirates</string>
    <string name="United_Kingdom">United Kingdom</string>
    <string name="Vietnam">Vietnam</string>
    <string name="abandon">Discard</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_copyright">Copyright © 2017 CyberLink Corp.</string>
    <string name="about_license_details">Details</string>
    <string name="about_me_guide">Enter your name and add a photo (optional) so that your contacts can recognize you.</string>
    <string name="about_me_menu_guide">Choose where you\'d like to import photo from…</string>
    <string name="about_me_title">About Me</string>
    <string name="about_open_source_license">Open Source License</string>
    <string name="about_page_legal_notices">Legal Notices</string>
    <string name="about_page_version">Version</string>
    <string name="about_version">Version</string>
    <string name="account_binding">Account Binding</string>
    <string name="account_hold_fix">Fix</string>
    <string name="account_hold_suggestion">There is a problem with your subscription. Click below to go to the Google Play subscription settings to fix your payment method.</string>
    <string name="account_manager_type">com.cyberlink.beautycircle</string>
    <string name="activate_email">Activate E-mail</string>
    <string name="add_btn">Add</string>
    <string name="add_friends_to_group">Add U Contacts to Group</string>
    <string name="add_phone_number">Add Number</string>
    <string name="add_text_to_share_btn">Add text note before sharing</string>
    <string name="add_to_home">Add to Home Screen</string>
    <string name="add_to_todo">Add to ToDo</string>
    <string name="add_voice_to_share_btn">Add voice note before sharing</string>
    <string name="add_yourself_friend">This is you. You cannot add yourself as a contact.</string>
    <string name="adding_friend_title">Adding Contacts</string>
    <string name="address">Address</string>
    <string name="admin_disable_vote">Voting was disabled by the administrator.</string>
    <string name="administrator_control">Administrator Control</string>
    <string name="admins_D">Admins (%1$d)</string>
    <string name="advance_poll_settings">Advanced Poll Settings</string>
    <string name="album_name_PHD">PhotoDirector Album</string>
    <string name="album_name_YCP">YouCam Perfect Album</string>
    <string name="album_name_YMK">YouCam Makeup Album</string>
    <string name="albums">Albums</string>
    <string name="albums_allPhotos">All Photos</string>
    <string name="albums_description">Add photos into a new album</string>
    <string name="all_right_reserved">All rights reserved</string>
    <string name="allow_multiple_choice">Allow Multiple Selections</string>
    <string name="already_have_cyberlink_account">I already have a CyberLink account.</string>
    <string name="app_name">Barcode Scanner</string>
    <string name="app_picker_name">Applications</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archive_chat_btn">Archive</string>
    <string name="cancel_text">Cancel</string>
    <string name="cant_talk_right_now">Can\'t talk right now</string>
    <string name="clm_meeting_allow_mute">Allow Anyone to Mute Others</string>
    <string name="clm_meeting_allow_recording_v2">Allow Anyone to Record</string>
    <string name="clm_meeting_lower_all_hands">Lower all hands (%d)</string>
    <string name="clm_meeting_lower_hand">Lower Hand</string>
    <string name="clm_meeting_move_to_waiting_room">Move to waiting room</string>
    <string name="clm_meeting_mute_all">Mute All</string>
    <string name="clm_meeting_mute_microphone">Mute Microphone</string>
    <string name="clm_meeting_pin_video">Pin Video</string>
    <string name="clm_meeting_prohibit_mute">Prohibit Participants From Muting Others</string>
    <string name="clm_meeting_prohibit_recording_v2">Prohibit Participants From Recording</string>
    <string name="clm_meeting_remove_from_meeting">Remove From Meeting</string>
    <string name="clm_meeting_set_host">Set as Host</string>
    <string name="clm_meeting_set_participant">Revoke Host Permissions</string>
    <string name="clm_meeting_stop_desktop_Sharing">Stop Current Screen Sharing</string>
    <string name="clm_meeting_stop_recording">Stop Recording</string>
    <string name="clm_meeting_turn_off_recognize">Turn Off Face Recognition</string>
    <string name="clm_meeting_turn_on_recognize">Turn On Face Recognition</string>
    <string name="clm_meeting_unmute_all">Unmute All</string>
    <string name="clm_meeting_unmute_microphone">Turn Microphone On</string>
    <string name="clm_meeting_unpin_video">Unpin Video</string>
    <string name="clm_schedule_meeting_waiting_room_host">All participants (except hosts)</string>
    <string name="clm_schedule_meeting_waiting_room_organization">Participants who are not in your organization (except hosts)</string>
    <string name="delete_album">Delete Album</string>
    <string name="delete_photo_guide">Delete Photo</string>
    <string name="delete_photos">Delete Photos</string>
    <string name="i_am_in_a_meeting">I am in a meeting</string>
    <string name="i_will_call_you_later">I will call you later</string>
    <string name="ok">OK</string>
    <string name="qrcode_link_renew">Renew Link/QR Code</string>
    <string name="qrcode_renew">Renew QR Code</string>
    <string name="rename_album">Rename Album</string>
    <string name="save_photos_to_group_album">Save Photos to Chat Room Album</string>
    <string name="save_photos_to_my_album">Save Photos to U Album</string>
    <string name="save_photos_to_my_device">Save Photos to My Device</string>
    <string name="save_to_group_album">Save to Group Album</string>
    <string name="save_to_my_album">Save to U Album</string>
    <string name="save_to_my_device">Save to My Device</string>
    <string name="send_by_main">Send by E-mail</string>
    <string name="send_photos_to_chat">Send Photos to Chat…</string>
    <string name="send_photos_with_comment">Send Photos With Comments…</string>
    <string name="share_photo">Share Photo…</string>
    <string name="share_photo_to_other_app">Share to other apps…</string>
    <string name="share_photo_with_comment">Share Photo With Comments…</string>
    <string name="urgent_calls_only">Urgent calls only</string>
</resources>