<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="15sp"
        android:textColor="@color/you_color_normal_blue"
        android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/item_name"
        android:lines="1"
        style="@style/DialogSelectionItemText"/>
    <RelativeLayout
        android:id="@+id/lower_hand_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_lower_hand"
            android:text="@string/clm_meeting_lower_hand"
            style="@style/DialogSelectionItemText"/>
        <View
            android:background="@color/you_color_normal_gray"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/item_lower_hand"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/item_pin_video"
        android:text="@string/clm_meeting_pin_video"
        style="@style/DialogSelectionItemText"/>
    <View
        android:background="@color/you_color_normal_gray"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/item_unpin_video"
        android:text="@string/clm_meeting_unpin_video"
        style="@style/DialogSelectionItemText"/>
    <View
        android:background="@color/you_color_normal_gray"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <RelativeLayout
        android:id="@+id/mute_microphone_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_mute_microphone"
            android:text="@string/clm_meeting_mute_microphone"
            style="@style/DialogSelectionItemText"/>
        <View
            android:background="@color/you_color_normal_gray"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/item_mute_microphone"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/item_unmute_microphone"
        android:text="@string/clm_meeting_unmute_microphone"
        style="@style/DialogSelectionItemText"/>
    <View
        android:background="@color/you_color_normal_gray"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/item_stop_recording"
        android:text="@string/clm_meeting_stop_recording"
        style="@style/DialogSelectionItemText"/>
    <View
        android:background="@color/you_color_normal_gray"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/item_assign_host"
        android:text="@string/clm_meeting_set_host"
        style="@style/DialogSelectionItemText"/>
    <View
        android:background="@color/you_color_normal_gray"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/item_remove_host"
        android:text="@string/clm_meeting_set_participant"
        style="@style/DialogSelectionItemText"/>
    <TextView
        android:id="@+id/item_move_to_waiting_room"
        android:text="@string/clm_meeting_move_to_waiting_room"
        style="@style/DialogSelectionItemText"/>
    <View
        android:background="@color/you_color_normal_gray"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/item_remove_from_meeting"
        android:text="@string/clm_meeting_remove_from_meeting"
        style="@style/DialogSelectionItemText"/>
</LinearLayout>
