<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/item_change_qrcode_link"
        android:text="@string/qrcode_link_renew"
        android:contentDescription="[AID]QRCodeMore_Renew"
        style="@style/DialogSelectionItemText"/>
    <TextView
        android:id="@+id/item_change_qrcode"
        android:text="@string/qrcode_renew"
        style="@style/DialogSelectionItemText"/>
    <View
        android:background="@color/you_color_normal_gray"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/item_send_qrcode"
        android:text="@string/send_by_main"
        android:contentDescription="[AID]QRCodeMore_ByEmail"
        style="@style/DialogSelectionItemText"/>
    <View
        android:background="@color/you_color_normal_gray"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/item_save_qrcode"
        android:text="@string/save_to_my_device"
        android:contentDescription="[AID]QRCodeMore_ToAlbum"
        style="@style/DialogSelectionItemText"/>
    <View
        android:background="@color/you_color_normal_gray"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/cancel"
        android:text="@string/cancel_text"
        android:contentDescription="[AID]QRCodeMore_Cancel"
        style="@style/DialogSelectionItemText"/>
</LinearLayout>
