<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/raise_or_lower_hand_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_raise_or_lower_hand"
            android:text="@string/clm_meeting_lower_all_hands"
            style="@style/DialogSelectionItemText"/>
        <View
            android:background="@color/you_color_normal_gray"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/mute_all_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_mute_all"
            android:text="@string/clm_meeting_mute_all"
            style="@style/DialogSelectionItemText"/>
        <View
            android:background="@color/you_color_normal_gray"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/unmute_all_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_unmute_all"
            android:text="@string/clm_meeting_unmute_all"
            style="@style/DialogSelectionItemText"/>
        <View
            android:background="@color/you_color_normal_gray"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/allow_recording_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_allow_recording"
            android:text="@string/clm_meeting_allow_recording_v2"
            style="@style/DialogSelectionItemText"/>
        <View
            android:background="@color/you_color_normal_gray"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/prohibit_recording_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_prohibit_recording"
            android:text="@string/clm_meeting_prohibit_recording_v2"
            style="@style/DialogSelectionItemText"/>
        <View
            android:background="@color/you_color_normal_gray"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/allow_mute_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_allow_mute"
            android:text="@string/clm_meeting_allow_mute"
            style="@style/DialogSelectionItemText"/>
        <View
            android:background="@color/you_color_normal_gray"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/prohibit_mute_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_prohibit_mute"
            android:text="@string/clm_meeting_prohibit_mute"
            style="@style/DialogSelectionItemText"/>
        <View
            android:background="@color/you_color_normal_gray"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/stop_desktop_Sharing_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_stop_desktop_Sharing"
            android:text="@string/clm_meeting_stop_desktop_Sharing"
            style="@style/DialogSelectionItemText"/>
        <View
            android:background="@color/you_color_normal_gray"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
    </LinearLayout>
</LinearLayout>
