<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/mediaMoreShareLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/mediaMoreShare"
            android:text="@string/share_photo"
            android:contentDescription="[AID]MediaMore_SharePhoto"
            style="@style/DialogSelectionItemText"/>
        <View style="@style/DialogSelectionItemSpliteLine"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/mediaMoreShareWithCommentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/mediaMoreShareWithComment"
            android:text="@string/share_photo_with_comment"
            android:contentDescription="[AID]MediaMore_ShareComment"
            style="@style/DialogSelectionItemText"/>
        <View style="@style/DialogSelectionItemSpliteLine"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/mediaMoreShareToOtherAppLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/mediaMoreShareToOtherApp"
            android:text="@string/share_photo_to_other_app"
            android:contentDescription="[AID]MediaMore_SharePhotoToOtherApp"
            style="@style/DialogSelectionItemText"/>
        <View style="@style/DialogSelectionItemSpliteLine"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/mediaMoreDownloadLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/mediaMoreDownload"
            android:text="@string/save_to_my_device"
            android:contentDescription="[AID]MediaMore_SavetoDevice"
            style="@style/DialogSelectionItemText"/>
        <View style="@style/DialogSelectionItemSpliteLine"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/copytoMyAlbumLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/copytoMyAlbum"
            android:text="@string/save_to_my_album"
            style="@style/DialogSelectionItemText"/>
        <View style="@style/DialogSelectionItemSpliteLine"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/saveToGroupAlbumLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/saveToGroupAlbum"
            android:text="@string/save_to_group_album"
            android:contentDescription="[AID]MediaMore_saveToGroupAlbum"
            style="@style/DialogSelectionItemText"/>
        <View style="@style/DialogSelectionItemSpliteLine"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/mediaMoreDeleteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/you_color_delete_red"
            android:id="@+id/mediaMoreDelete"
            android:text="@string/delete_photo_guide"
            android:contentDescription="[AID]MediaMore_Delete"
            style="@style/DialogSelectionItemText"/>
        <View style="@style/DialogSelectionItemSpliteLine"/>
    </LinearLayout>
    <TextView
        android:id="@+id/mediaMoreCancel"
        android:contentDescription="[AID]MediaMore_Cancel"
        style="@style/DialogSelectionItemCancelText"/>
</LinearLayout>
